# autonomous-market-rhg

./: .gitignore  FORMULATION.md  README.md  STATUS_dam_rtm_boundary.md  pyproject.toml  requirements.txt
_archive/: DIAGNOSIS_mpgne_reference_gaps.md  Handoff.md  PLAN_case_study_redesign.md  PLAN_mp_focapo_rtm.md  calibrate.py  focapo_1day.py  run_case_study.py  run_week.py
_archive/configs/: base.yaml  horizon_sweep.yaml  scalability.yaml
_archive/patch_scripts/: patch_report_figs.py  revert.py
_archive/report/: agent_formulations.tex  coupling_band_issue.tex
_archive/scripts/: 00_fetch_ercot.py  01_simple_game_results.py  02_solve_mpqp.py  03_build_facet_graph.py  04_closed_loop.py  05_generate_figures.py  download_ercot_2025.py
_archive/simple_game/: kkt_filter_test.py  rtm_v0_game.py  rtm_v0_test.py  v0_game.py  v0_pipeline.py  v1_game.py  v1_horizon_test.py  v2_game.py  v2_test.py  v3_game.py  v3_test.py
_archive/tests/: test_agents.py  test_analysis.py  test_coupling.py  test_end_to_end.py  test_ercot.py  test_forecasting.py  test_simple_game.py  (+1 more)
_validated_baseline/: FORMULATION.md  README.md
report/: rhg_detailed_report.tex  rhg_year_report.tex
results/: bench_cold_table.tex  bench_warm_table.tex  bench_warm_year_table.tex  sim_log.txt  year_monthly_table.tex  year_seasonal_table.tex
simple_game/: bench_solvers.py  dam.py  report_bench.py  report_figs.py  report_numbers.py  rhg_figs.py  rhg_mpqp.py  rhg_offline.py  rhg_online.py  rhg_week.py  rhg_year.py  year_report.py
tests/: test_facet_neighbors.py  test_hall_multiplier_selection.py
(+36 files in other folders)
