[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amrhg"
version = "0.1.0"
description = "Iteration-Free Multi-Agent Receding Horizon Games for Autonomous Market Participation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "ppopt==1.6.12",
    "gurobipy==13.0.1",
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
notebooks = [
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
